--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -r esm *.test.js"
+    "test": "mocha -r esm *.test.js",
+    "tsc": "tsc --checkJs --allowJs index.d.ts index.js --noEmit --lib es6"
   },
   "devDependencies": {
+    "@types/node": "^12.7.11",
     "chai": "^4.2.0",
-    "mocha": "^6.2.1"
+    "esm": "^3.2.25",
+    "mocha": "^6.2.1",
+    "typescript": "^3.6.3"
   },
-  "dependencies": {
-    "esm": "^3.2.25"
-  }
+  "dependencies": {}
 }
