--- a/alog/package.json
+++ b/alog/package.json
@@ -24,6 +24,7 @@
     "esm": "^3.2.25",
     "fake-indexeddb": "^2.1.1",
     "mocha": "^6.2.1",
+    "prettier": "1.18.2",
     "typescript": "^3.6.3"
   },
   "dependencies": {}
